{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 438,
  "lineage": "b2fc769b-8ad4-af37-0b28-626a88983ab2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "sp-elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02ede9502a7a23793",
            "association_id": "eipassoc-0f9230ca365623f61",
            "domain": "vpc",
            "id": "eipalloc-02ede9502a7a23793",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0aebfd9f693602db0",
            "private_dns": "ip-192-168-11-183.ec2.internal",
            "private_ip": "192.168.11.183",
            "public_dns": "ec2-54-225-187-52.compute-1.amazonaws.com",
            "public_ip": "54.225.187.52",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sp-elastic-ip",
              "Project": "DevOps Semester Project"
            },
            "tags_all": {
              "Name": "sp-elastic-ip",
              "Project": "DevOps Semester Project"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sp-private-ubuntu-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:058264531795:instance/i-00df93e0b0f14ec04",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00df93e0b0f14ec04",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sp-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-085ec4d309e51cc6a",
            "private_dns": "ip-192-168-21-188.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.21.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03bfa8e02e332453c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd8bb0880187ad52",
            "tags": {
              "Application": "Backend",
              "Name": "sp-private-ubuntu-backend",
              "Project": "DevOps Semester Project"
            },
            "tags_all": {
              "Application": "Backend",
              "Name": "sp-private-ubuntu-backend",
              "Project": "DevOps Semester Project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d4a50cd57cd609fe"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_db_instance.sp-private-postgres-database",
            "aws_db_subnet_group.sp-db-subnet-group",
            "aws_security_group.sp-private-backend-sg",
            "aws_security_group.sp-private-database-sg",
            "aws_subnet.sp-subnet-private-1a",
            "aws_subnet.sp-subnet-private-1b",
            "aws_subnet.sp-subnet-private-1c",
            "aws_vpc.sp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sp-private-ubuntu-frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:058264531795:instance/i-0cb3d1d1292f233ed",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cb3d1d1292f233ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sp-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ad18f1aa3952706e",
            "private_dns": "ip-192-168-21-91.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.21.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-025a7254c140b31b3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd8bb0880187ad52",
            "tags": {
              "Application": "Frontend",
              "Name": "sp-private-ubuntu-frontend",
              "Project": "DevOps Semester Project"
            },
            "tags_all": {
              "Application": "Frontend",
              "Name": "sp-private-ubuntu-frontend",
              "Project": "DevOps Semester Project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00385b3f2e7628bd6"
            ]
          },
          "dependencies": [
            "aws_db_instance.sp-private-postgres-database",
            "aws_db_subnet_group.sp-db-subnet-group",
            "aws_instance.sp-private-ubuntu-backend",
            "aws_security_group.sp-private-backend-sg",
            "aws_security_group.sp-private-database-sg",
            "aws_security_group.sp-private-frontend-sg",
            "aws_subnet.sp-subnet-private-1a",
            "aws_subnet.sp-subnet-private-1b",
            "aws_subnet.sp-subnet-private-1c",
            "aws_vpc.sp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sp-public-ubuntu-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:058264531795:instance/i-0b9e1d4823944ddfb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bastion-role",
            "id": "i-0b9e1d4823944ddfb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sp-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00701fb48bebe9645",
            "private_dns": "ip-192-168-11-138.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.11.138",
            "public_ip": "18.215.234.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ca957a5e84c9da66",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0767bb9fa1bbb2b00",
            "tags": {
              "Name": "sp-public-ubuntu-bastion",
              "Project": "DevOps Semester Project"
            },
            "tags_all": {
              "Name": "sp-public-ubuntu-bastion",
              "Project": "DevOps Semester Project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0467db98c00407da7"
            ]
          },
          "dependencies": [
            "aws_security_group.sp-public-bastion-sg",
            "aws_subnet.sp-subnet-public-1a",
            "aws_vpc.sp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sp-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264531795:internet-gateway/igw-01f51b28998c60e92",
            "id": "igw-01f51b28998c60e92",
            "owner_id": "058264531795",
            "tags": {
              "Name": "sp-internet-gateway",
              "Project": "DevOps Semester Project"
            },
            "tags_all": {
              "Name": "sp-internet-gateway",
              "Project": "DevOps Semester Project"
            },
            "vpc_id": "vpc-04b6cb0e25685cdea"
          },
          "dependencies": [
            "aws_vpc.sp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "sp-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02ede9502a7a23793",
            "association_id": "eipassoc-0f9230ca365623f61",
            "connectivity_type": "public",
            "id": "nat-0ec04a4b0361cacdb",
            "network_interface_id": "eni-0aebfd9f693602db0",
            "private_ip": "192.168.11.183",
            "public_ip": "54.225.187.52",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0767bb9fa1bbb2b00",
            "tags": {
              "Name": "sp-nat-gateway",
              "Project": "DevOps Semester Project"
            },
            "tags_all": {
              "Name": "sp-nat-gateway",
              "Project": "DevOps Semester Project"
            }
          },
          "dependencies": [
            "aws_eip.sp-elastic-ip",
            "aws_subnet.sp-subnet-public-1a",
            "aws_vpc.sp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sp-route-table-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264531795:route-table/rtb-04773c9178c32169b",
            "id": "rtb-04773c9178c32169b",
            "owner_id": "058264531795",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ec04a4b0361cacdb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sp-route-table-private",
              "Project": "DevOps Semester Project"
            },
            "tags_all": {
              "Name": "sp-route-table-private",
              "Project": "DevOps Semester Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b6cb0e25685cdea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.sp-elastic-ip",
            "aws_nat_gateway.sp-nat-gateway",
            "aws_subnet.sp-subnet-public-1a",
            "aws_vpc.sp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sp-route-table-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264531795:route-table/rtb-017a9406f4b82c411",
            "id": "rtb-017a9406f4b82c411",
            "owner_id": "058264531795",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01f51b28998c60e92",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sp-route-table-public",
              "Project": "DevOps Semester Project"
            },
            "tags_all": {
              "Name": "sp-route-table-public",
              "Project": "DevOps Semester Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b6cb0e25685cdea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sp-internet-gateway",
            "aws_vpc.sp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sp-subnet-private-1a-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07101e904f32432d7",
            "route_table_id": "rtb-04773c9178c32169b",
            "subnet_id": "subnet-0dd8bb0880187ad52"
          },
          "dependencies": [
            "aws_eip.sp-elastic-ip",
            "aws_nat_gateway.sp-nat-gateway",
            "aws_route_table.sp-route-table-private",
            "aws_subnet.sp-subnet-private-1a",
            "aws_subnet.sp-subnet-public-1a",
            "aws_vpc.sp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sp-subnet-private-1b-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5e102d18d45442c",
            "route_table_id": "rtb-04773c9178c32169b",
            "subnet_id": "subnet-026f9eb406d37478c"
          },
          "dependencies": [
            "aws_eip.sp-elastic-ip",
            "aws_nat_gateway.sp-nat-gateway",
            "aws_route_table.sp-route-table-private",
            "aws_subnet.sp-subnet-private-1b",
            "aws_subnet.sp-subnet-public-1a",
            "aws_vpc.sp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sp-subnet-private-1c-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039cfe1f48930bd5f",
            "route_table_id": "rtb-04773c9178c32169b",
            "subnet_id": "subnet-0aef37441ff8690c1"
          },
          "dependencies": [
            "aws_eip.sp-elastic-ip",
            "aws_nat_gateway.sp-nat-gateway",
            "aws_route_table.sp-route-table-private",
            "aws_subnet.sp-subnet-private-1c",
            "aws_subnet.sp-subnet-public-1a",
            "aws_vpc.sp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sp-subnet-public-1a-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017f330e8578c0ef9",
            "route_table_id": "rtb-017a9406f4b82c411",
            "subnet_id": "subnet-0767bb9fa1bbb2b00"
          },
          "dependencies": [
            "aws_internet_gateway.sp-internet-gateway",
            "aws_route_table.sp-route-table-public",
            "aws_subnet.sp-subnet-public-1a",
            "aws_vpc.sp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sp-subnet-public-1b-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014b9d0725a4f935c",
            "route_table_id": "rtb-017a9406f4b82c411",
            "subnet_id": "subnet-0b07402d9016e7035"
          },
          "dependencies": [
            "aws_internet_gateway.sp-internet-gateway",
            "aws_route_table.sp-route-table-public",
            "aws_subnet.sp-subnet-public-1b",
            "aws_vpc.sp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sp-subnet-public-1c-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061efc036a12f690b",
            "route_table_id": "rtb-017a9406f4b82c411",
            "subnet_id": "subnet-0b0b4a6713855157e"
          },
          "dependencies": [
            "aws_internet_gateway.sp-internet-gateway",
            "aws_route_table.sp-route-table-public",
            "aws_subnet.sp-subnet-public-1c",
            "aws_vpc.sp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sp-private-backend-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264531795:security-group/sg-0d4a50cd57cd609fe",
            "description": "Allows SSH access to developers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d4a50cd57cd609fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sp-private-backend-sg",
            "name_prefix": "",
            "owner_id": "058264531795",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04b6cb0e25685cdea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sp-private-database-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264531795:security-group/sg-0fa8750aeb2797fbf",
            "description": "Security Group for PostgreSQL Instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa8750aeb2797fbf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sp-private-database-sg",
            "name_prefix": "",
            "owner_id": "058264531795",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04b6cb0e25685cdea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sp-private-frontend-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264531795:security-group/sg-00385b3f2e7628bd6",
            "description": "Allows SSH access to developers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00385b3f2e7628bd6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sp-private-frontend-sg",
            "name_prefix": "",
            "owner_id": "058264531795",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04b6cb0e25685cdea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sp-public-bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264531795:security-group/sg-0467db98c00407da7",
            "description": "Allows SSH access to developers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0467db98c00407da7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sp-public-bastion-sg",
            "name_prefix": "",
            "owner_id": "058264531795",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04b6cb0e25685cdea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sp-subnet-private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264531795:subnet/subnet-0dd8bb0880187ad52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd8bb0880187ad52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264531795",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sp-subnet-private-1a",
              "Project": "DevOps Semester Project"
            },
            "tags_all": {
              "Name": "sp-subnet-private-1a",
              "Project": "DevOps Semester Project"
            },
            "vpc_id": "vpc-04b6cb0e25685cdea"
          },
          "dependencies": [
            "aws_vpc.sp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sp-subnet-private-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264531795:subnet/subnet-026f9eb406d37478c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026f9eb406d37478c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264531795",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sp-subnet-private-1b",
              "Project": "DevOps Semester Project"
            },
            "tags_all": {
              "Name": "sp-subnet-private-1b",
              "Project": "DevOps Semester Project"
            },
            "vpc_id": "vpc-04b6cb0e25685cdea"
          },
          "dependencies": [
            "aws_vpc.sp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sp-subnet-private-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264531795:subnet/subnet-0aef37441ff8690c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aef37441ff8690c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264531795",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sp-subnet-private-1c",
              "Project": "DevOps Semester Project"
            },
            "tags_all": {
              "Name": "sp-subnet-private-1c",
              "Project": "DevOps Semester Project"
            },
            "vpc_id": "vpc-04b6cb0e25685cdea"
          },
          "dependencies": [
            "aws_vpc.sp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sp-subnet-public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264531795:subnet/subnet-0767bb9fa1bbb2b00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0767bb9fa1bbb2b00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264531795",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sp-subnet-public-1a",
              "Project": "DevOps Semester Project"
            },
            "tags_all": {
              "Name": "sp-subnet-public-1a",
              "Project": "DevOps Semester Project"
            },
            "vpc_id": "vpc-04b6cb0e25685cdea"
          },
          "dependencies": [
            "aws_vpc.sp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sp-subnet-public-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264531795:subnet/subnet-0b07402d9016e7035",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b07402d9016e7035",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264531795",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sp-subnet-public-1b",
              "Project": "DevOps Semester Project"
            },
            "tags_all": {
              "Name": "sp-subnet-public-1b",
              "Project": "DevOps Semester Project"
            },
            "vpc_id": "vpc-04b6cb0e25685cdea"
          },
          "dependencies": [
            "aws_vpc.sp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sp-subnet-public-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264531795:subnet/subnet-0b0b4a6713855157e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0b4a6713855157e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264531795",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sp-subnet-public-1c",
              "Project": "DevOps Semester Project"
            },
            "tags_all": {
              "Name": "sp-subnet-public-1c",
              "Project": "DevOps Semester Project"
            },
            "vpc_id": "vpc-04b6cb0e25685cdea"
          },
          "dependencies": [
            "aws_vpc.sp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264531795:vpc/vpc-04b6cb0e25685cdea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-030f6f2df3b64b3d0",
            "default_route_table_id": "rtb-0672d7e94c179e50b",
            "default_security_group_id": "sg-0bed77c4ca7d34540",
            "dhcp_options_id": "dopt-076927003c1dc6d1d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04b6cb0e25685cdea",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0672d7e94c179e50b",
            "owner_id": "058264531795",
            "tags": {
              "Name": "sp-vpc",
              "Project": "DevOps Semester Project"
            },
            "tags_all": {
              "Name": "sp-vpc",
              "Project": "DevOps Semester Project"
            }
          }
        }
      ]
    }
  ]
}